--- a/templates/list.tex
+++ b/templates/list.tex
@@ -32,6 +32,12 @@
             {% endfor %}
             % for end
             \hline
+            &&&
+            \hline
+            &&&
+            \hline
+            &&&
+            \hline
         \end{tabular}
     \end{table}
 \end{document}
