--- a/templates/service.tex
+++ b/templates/service.tex
@@ -5,6 +5,9 @@
 \usepackage{polyglossia}
 \setmainlanguage{german}
 
+\usepackage{indentfirst}
+\parindent 0pt
+
 \usepackage[
     a4paper,
     left=20mm,
@@ -20,6 +23,9 @@
     Bitte täglich spülen und Uhrzeit eintragen. Wenn die Maschine darum bittet,
     reinigen, beziehungsweise entkalken und ein Kreuzchen in der entsprechenden
     Spalte machen.
+
+    Neu: Der Kaffeedienst soll nach Reinigung der Kaffeemaschine
+    bitte auch die {\color{red}Spülmaschine anstellen}.
     \begin{table}[h!]
         \Large
         \begin{tabular}{l | p{1.8cm} | p{1.8cm} | p{1.8cm} | p{1.8cm} | p{1.8cm}}
