define a coffee-score for filling service lsit

--- a/templates/service.tex
+++ b/templates/service.tex
@@ -20,8 +20,8 @@
     \pagenumbering{gobble}
     \section*{Kaffeedienst {{ services[-1].start_date.strftime('%B %Y') }}}
     {{ foo }}
-    Bitte täglich spülen und Uhrzeit eintragen. Wenn die Maschine darum bittet,
-    reinigen, beziehungsweise entkalken und ein Kreuzchen in der entsprechenden
+    Bitte täglich spülen und Uhrzeit eintragen. Einmal pro Woche reinigen,
+    einmal pro Monat entkalken und je ein Kreuzchen in der entsprechenden
     Spalte machen.
 
     Neu: Der Kaffeedienst soll nach Reinigung der Kaffeemaschine
